--- a/package.json
+++ b/package.json
@@ -5,12 +5,13 @@
   "license": "MIT",
   "scripts": {
     "build": "cross-env NODE_OPTIONS=--openssl-legacy-provider preact build",
+    "deploy": "gh-pages -d build",
+    "dev": "DEV=true cross-env NODE_OPTIONS=--openssl-legacy-provider preact watch --clear=false",
+    "eslint": "eslint 'src/**'",
+    "lint": "yarn eslint && yarn stylelint",
+    "predeploy": "yarn build",
     "serve": "sirv build --port 8080 --cors --single",
-    "dev": "cross-env NODE_OPTIONS=--openssl-legacy-provider preact watch",
-    "lint": "eslint src"
-  },
-  "eslintConfig": {
-    "extends": "preact"
+    "stylelint": "stylelint '**/*.css'"
   },
   "eslintIgnore": [
     "build/*"
@@ -20,11 +21,15 @@
     "eslint": "^7.17.0",
     "eslint-config-preact": "^1.1.3",
     "preact-cli": "^3.0.0",
-    "sirv-cli": "^1.0.3"
+    "sirv-cli": "^1.0.3",
+    "stylelint": "^15.11.0",
+    "stylelint-config-standard": "^34.0.0"
   },
   "dependencies": {
+    "gh-pages": "^6.1.0",
     "jest": "^29.7.0",
     "preact": "^10.1.0",
-    "preact-render-to-string": "^5.1.2"
+    "preact-render-to-string": "^5.1.2",
+    "utilities": "https://github.com/philrmass/utilities#v0.12.3"
   }
 }
