--- a/src/manifest.json
+++ b/src/manifest.json
@@ -14,7 +14,7 @@
       "sizes": "512x512"
     },
     {
-      "src": "./assets/icon.png"
+      "src": "./assets/icon.png",
       "type": "image/png",
       "sizes": "512x512"
     }
